...
val Writer = Color(0xFFd64c45)
val Cleaner = Color(0xFF78828a)
val Carpenter = Color(0xFFd36c4f)
val Photographer = Color(0xFF414b82)
val PersonalTrainer = Color(0xFFfb7c44)
val HairStylist = Color(0xFFf15c62)
val Other = Color(0xFF9B9999)

val DarkBlue = Color(0xFF003366)

val IAButton_green_color = Color(0xFF00B383)
val IAButton_blue_color = Color(0xFF0099FF)

